fix navbar spacing on widescreen

--- a/public/styles.css
+++ b/public/styles.css
@@ -188,6 +188,7 @@ nav {
     display: flex;
     gap: 30px;
     flex-direction: row;
+    justify-content: center;
 }
 
 .nav-links div {
